src/ui/components/EditIdentity/EditIdentity.scss
.edit-identity {
  .edit-identity-main {
    h2 {
      text-align: left;
    }

    ion-col {
      display: flex;
      flex-direction: column;
    }

    ion-button,
    ion-button.md {
      width: 2.8125rem;
      height: 2.8125rem;
      margin: 0;
      --background: transparent;
      --box-shadow: none;
      --color: var(--ion-color-secondary);
      --background-activated: var(--color-light-grey);

      &::part(native) {
        padding: 0;
      }
    }

    ion-icon {
      width: 1.475rem;
      height: 1.475rem;
      margin: 0;
    }

    .edit-identity-option {
      display: flex;

      > * {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }

      &:not(:last-child) {
        margin-bottom: 0.5rem;
      }
    }
  }

  .edit-identity-inner {
    h2 {
      text-align: center;
    }

    .error-message,
    .error-placeholder {
      margin-bottom: 1rem;
    }

    .error-placeholder {
      height: 1.375rem;
    }
  }
}

